P2: Added a range slider that controls the time

--- a/Project/Project2/server/public/assets/locales/fr.json
+++ b/Project/Project2/server/public/assets/locales/fr.json
@@ -2,7 +2,7 @@
   "head": {
     "title": "Prototype pour le API de recette"
   },
-  "body": {
+  ".text-test-container": {
     "test": "Bonjour, ceci est un test."
   }
 }
