--- a/Project/Project2/server/public/assets/locales/en.json
+++ b/Project/Project2/server/public/assets/locales/en.json
@@ -2,7 +2,7 @@
   "head": {
     "title": "Prototype for Recipe API"
   },
-  "body": {
+  ".text-test-container": {
     "test": "Hello, this is a test."
   }
 }
