P2: Added language button

--- a/Project/Project2/server/public/assets/locales/en.json
+++ b/Project/Project2/server/public/assets/locales/en.json
@@ -4,5 +4,8 @@
   },
   ".text-test-container": {
     "test": "Hello, this is a test."
+  },
+  ".language-container": {
+    "selector": "FR"
   }
 }
