--- a/Project/Project2/server/public/assets/locales/fr.json
+++ b/Project/Project2/server/public/assets/locales/fr.json
@@ -4,5 +4,8 @@
   },
   ".text-test-container": {
     "test": "Bonjour, ceci est un test."
+  },
+  ".language-container": {
+    "selector": "EN"
   }
 }
