P2: cleaned up the code and added more commenting

--- a/Project/Project2/server/public/assets/locales/en.json
+++ b/Project/Project2/server/public/assets/locales/en.json
@@ -1,6 +1,6 @@
 {
   "head": {
-    "title": "Prototype for Recipe API"
+    "title": "Add Your Grain of Salt"
   },
   ".text-test-container": {
     "test": "Hello, this is a test."
