--- a/Project/Project2/server/public/assets/locales/fr.json
+++ b/Project/Project2/server/public/assets/locales/fr.json
@@ -1,6 +1,6 @@
 {
   "head": {
-    "title": "Prototype pour le API de recette"
+    "title": "Ajoute Ton Grain de Sel"
   },
   ".text-test-container": {
     "test": "Bonjour, ceci est un test."
